--- a/css/typo.css
+++ b/css/typo.css
@@ -87,6 +87,23 @@ q{
 
 }
 
+em{
+    font-style: italic;
+}
+
+u{
+    text-decoration: underline;
+}
+
+blockquote { 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
 figcaption{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: smaller;
